Finishing Sorting and Paging of course search